substitute as test

--- a/apache2.conf
+++ b/apache2.conf
@@ -10,6 +10,7 @@ LoadModule proxy_module modules/mod_proxy.so
 LoadModule proxy_http_module modules/mod_proxy_http.so
 LoadModule proxy_html_module modules/mod_proxy_html.so
 LoadModule filter_module modules/mod_filter.so
+LoadModule substitute_module modules/mod_substitute.so
 TypesConfig /etc/mime.types
 
 ServerName proxy.test
@@ -31,10 +32,12 @@ ProxyRequests Off
 ProxyPass /proxied/ http://localhost:8080/
 ProxyPassReverse /proxied/ http://localhost:8080/
 <Location /proxied/>
-	ProxyHTMLEnable On
-	ProxyHTMLLinks link href
-	# SetOutputFilter inflate;proxy-html;deflate
-	AddOutputFilterByType proxy-html text/html
-	ProxyHTMLURLMap ^/ /proxied/
+   ProxyHTMLEnable On
+   ProxyHTMLLinks link href
+   # apply to a specific MIME type; handle compression; apply both HTML map and substitute, as test
+   AddOutputFilterByType inflate;proxy-html;substitute;deflate text/html
+
+   ProxyHTMLURLMap ^/ /proxied/
+   Substitute "s@Title@REPLACED TITLE@"
 </Location>
 
