--- a/apache2.conf
+++ b/apache2.conf
@@ -29,15 +29,15 @@ ErrorLogFormat "[%m:%l] %M"
 </Directory>
 
 ProxyRequests Off
-ProxyPass /proxied/ http://localhost:8080/
-ProxyPassReverse /proxied/ http://localhost:8080/
+ProxyPass /proxied/ http://localhost:8081/
+ProxyPassReverse /proxied/ http://localhost:8081/
 <Location /proxied/>
    ProxyHTMLEnable On
    ProxyHTMLLinks link href
    # apply to a specific MIME type; handle compression; apply both HTML map and substitute, as test
    AddOutputFilterByType inflate;proxy-html;substitute;deflate text/html
 
-   ProxyHTMLURLMap ^/ /proxied/
+   ProxyHTMLURLMap ^/ /proxied/ R
    Substitute "s@Title@REPLACED TITLE@"
 </Location>
 
